--- a/style.css
+++ b/style.css
@@ -1,23 +1,153 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 body {
     display: flex;
+    flex:0 1 auto;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
+   
+    
+    
    
 }
 
 .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    background-color: #1F2937;
+    font-size: 18px;
+    padding-left: 5vh;
+    padding-right: 5vh;
 }
 
 .links {
     display: flex;
     list-style-type: none;
     gap:1em;
+    color: white;
 }
+
+/* Section one start */
+.section-one {
+    background-color: #1F2937;
+    display: flex;
+    flex-direction: row wrap;
+    flex: 0 1 auto;
+    justify-content: space-between;
+    align-items: center;
+    padding: 3em;
+    gap: 15vh;
+    
+}
+
+.section-one-text {
+    display: flex;
+    flex-flow: column wrap; 
+    justify-content: space-around;
+    align-items: flex-start;
+    gap: 1em;
+}
+
+
+
+img {
+    display: flex;
+    max-width: 200px;
+    flex-grow: 0;
+    
+    border-radius: 10px;
+    
+}
+#dog {
+
+}
+/*Section 1 END*/
+/*----------------------------------------------------------------------------------------------------------------------------------------*/
+/*Section 2 START*/
+.section-two {
+    display: flex;
+    flex:0 1 auto;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin: 5vh;
+
+}
+
+.cards {
+    display: flex;
+    flex-direction: column wrap;
+    gap: 10px;
+}
+.card1, .card2, .card3, .card4 {
+  display: flex;
+  flex-flow:column wrap;
+  gap:10px;
+
+} 
+
+/*Section 2 END*/
+/*----------------------------------------------------------------------------------------------------------------------------------------*/
+/*Section 3 Start*/
+
+.section-three{
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    background-color: #E5E7EB;
+
+
+}
+.quote-text {
+    padding-left: 20vh;
+    padding-right: 20vh;
+    font-size:26px;
+    color:#1F2937;
+    display: flex;
+    justify-content: space-between;
+}
+.signature {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 20vh;
+}
+
+/*Section 3 END*/
+/*----------------------------------------------------------------------------------------------------------------------------------------*/
+/*Section 4 Start*/
+
+.section-four {
+    display: flex;
+    justify-content: space-between;
+    background-color: #3882F6;
+    margin-left:20vh;
+    margin-right: 20vh;
+    margin-top: 10vh;
+    margin-bottom: 10vh;
+    padding: 20px;
+    border-radius: 10px;
+
+}
+.action {
+    color: white;
+}
+
+
+a:link   { text-decoration: none; color:white;}
+a:visited{ text-decoration: none; color:white;}
+a:hover  { text-decoration: none; color:white;}
+a:focus  { text-decoration: none; color:white;}
+a:active { text-decoration: none; color:white;}
+
+
 .footer {
     display: flex;
     justify-content: center;
     flex-shrink: 0;
+    background-color: #1F2937;
+    padding:3vh;
+    color:white;
 }
 
